--- a/ISAwebapp/ISAProject/ISAProject.csproj
+++ b/ISAwebapp/ISAProject/ISAProject.csproj
@@ -25,6 +25,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
   </ItemGroup>
 
 </Project>
