--- a/ISAwebapp/ISAProject/ISAProject.csproj
+++ b/ISAwebapp/ISAProject/ISAProject.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="barcode" Version="2023.12.4" />
     <PackageReference Include="Castle.Core" Version="5.1.1" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
