--- a/ISAwebapp/ISAProject/ISAProject.csproj
+++ b/ISAwebapp/ISAProject/ISAProject.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="barcode" Version="2023.12.4" />
     <PackageReference Include="Castle.Core" Version="5.1.1" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
+    <PackageReference Include="Hangfire" Version="1.8.9" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
