--- a/ISAwebapp/ISAwebapp/appsettings.json
+++ b/ISAwebapp/ISAwebapp/appsettings.json
@@ -1,8 +1,12 @@
 {
+	"ConnectionStrings": {
+		"HangfireConnection": "Server=localhost;Database=explorer-isa;Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+	  "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*"
