--- a/ISAwebapp/ISAwebapp/API.csproj
+++ b/ISAwebapp/ISAwebapp/API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.8.9" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
@@ -21,6 +22,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ISAProject\ISAProject.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Hubs\Models\" />
   </ItemGroup>
 
 </Project>
